# mcp-server

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  main1.py  pyproject.toml  server.py  setup.py
.github/workflows/: ci.yml  deploy-to-aws-ecs.yml  deploy-to-docker-swarm.yml  deploy.yml  docker-build.yml  release.yml  terraform.yml
agents/: chat.py  code.py  coding.py  finance.py  general.py  server.py  weather.py
api/v1/: chat.py  code.py  general.py
clients/: client.py  small_client.py
context/: app_context.py  chat.py  code.py  context.py  lifespan_context.py
data_sources/: abstract_fetcher.py  abstract_storage.py  api_fetcher.py  filesystem.py  github_fetcher.py  http_fetcher.py  mongodb.py  postgres.py  redis.py  s3.py
infra/: README.md  main.tf  outputs.tf  variables.tf
infra/envs/: dev.tfvars  prod.tfvars  stag.tfvars  uat.tfvars
infra/modules/ecs-service/: main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  variables.tf
models/: types.py
prompts/: chat.py  coding.py  example.py
resources/: abstract_db.py  api.py  base.py  chat.py  chat_templates.py  code.py  code_templates.py  config.py  filesystem.py  mongodb.py  postgres.py  redis.py  s3.py
tests/: chat.py  conftest.py  general.py  pytest.ini  small_client.py
tests/e2e/: test_chat_full.py  test_databases.py
tests/integration/: test_chat_endpoints.py
tests/unit/: test_chat_tools.py
tools/: chat.py  code.py  coding.py  finance.py  general.py  image.py  utils.py
utils/: logger_config.py  retries.py
