[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server using FastMCP, and FastAPI."
authors = [{ name = "Rainer Arencibia", email = "rainer85ah@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.5.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.0",
    "motor>=3.4.0",
    "boto3>=1.38.26",
    "aiohttp>=3.12.4",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "redis>=6.2.0",
    "botocore>=1.38.26",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
